--- a/docker/services/frontend/html/config-tcn.html
+++ b/docker/services/frontend/html/config-tcn.html
@@ -696,6 +696,54 @@
 
         <!-- Training Tab -->
         <div id="tab-training" class="tab-content">
+            <!-- Auto-Training (moved to top) -->
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">&#128336; Auto-Training</h3>
+                    <div style="display: flex; gap: 0.5rem;">
+                        <button class="btn btn-success btn-sm" id="btn-enable-auto" onclick="toggleAutoTraining(true)">
+                            &#9654; Aktivieren
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="btn-disable-auto" onclick="toggleAutoTraining(false)" disabled>
+                            &#9632; Deaktivieren
+                        </button>
+                    </div>
+                </div>
+                <div id="auto-training-status">
+                    <div class="loading"><div class="spinner"></div></div>
+                </div>
+                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-top: 1rem;">
+                    <div class="form-group" style="margin-bottom: 0;">
+                        <label>Intervall</label>
+                        <select class="form-control" id="auto-interval">
+                            <option value="daily">Täglich</option>
+                            <option value="weekly" selected>Wöchentlich</option>
+                            <option value="monthly">Monatlich</option>
+                            <option value="manual">Manuell</option>
+                        </select>
+                    </div>
+                    <div class="form-group" style="margin-bottom: 0;">
+                        <label>Timeframes</label>
+                        <div style="display: flex; gap: 1rem; padding-top: 0.5rem;">
+                            <label style="display: flex; align-items: center; gap: 0.3rem; cursor: pointer;">
+                                <input type="checkbox" id="auto-tf-1h" checked> 1h
+                            </label>
+                            <label style="display: flex; align-items: center; gap: 0.3rem; cursor: pointer;">
+                                <input type="checkbox" id="auto-tf-4h" checked> 4h
+                            </label>
+                            <label style="display: flex; align-items: center; gap: 0.3rem; cursor: pointer;">
+                                <input type="checkbox" id="auto-tf-1d" checked> 1d
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div style="margin-top: 1rem;">
+                    <button class="btn btn-primary" id="btn-run-now" onclick="runAutoTrainingNow()">
+                        &#9889; Jetzt starten
+                    </button>
+                </div>
+            </div>
+
             <div class="grid-2-equal">
                 <!-- Training Status -->
                 <div class="card">
@@ -710,38 +758,39 @@
                 <!-- Start Training -->
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">&#128295; Training starten</h3>
+                        <h3 class="card-title">&#128295; Manuelles Training</h3>
                     </div>
                     <div class="form-group">
-                        <label>Symbole (für Training) <span id="symbols-count" style="color: #888; font-weight: normal;"></span></label>
-                        <select class="form-control" id="train-symbols" multiple style="height: 150px;">
+                        <label>Symbole <span id="symbols-count" style="color: #888; font-weight: normal;"></span></label>
+                        <select class="form-control" id="train-symbols" multiple style="height: 120px;">
                             <option disabled>Lade Symbole...</option>
                         </select>
                         <div style="display: flex; gap: 0.5rem; margin-top: 0.5rem;">
                             <button type="button" class="btn btn-secondary" onclick="selectAllSymbols()" style="flex: 1; padding: 0.3rem;">Alle</button>
                             <button type="button" class="btn btn-secondary" onclick="selectNoSymbols()" style="flex: 1; padding: 0.3rem;">Keine</button>
                         </div>
-                        <small style="color: #888;">Ctrl+Klick für Mehrfachauswahl</small>
                     </div>
-                    <div class="form-group">
-                        <label>Timeframe</label>
-                        <select class="form-control" id="train-timeframe">
-                            <option value="1h" selected>1h</option>
-                            <option value="4h">4h</option>
-                            <option value="1d">1d</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label>Lookback (Tage)</label>
-                        <input type="number" class="form-control" id="train-lookback" value="365" min="30" max="1000">
-                    </div>
-                    <div class="form-group">
-                        <label>Epochen</label>
-                        <input type="number" class="form-control" id="train-epochs" value="100" min="10" max="1000">
-                    </div>
-                    <div class="form-group">
-                        <label>Batch Size</label>
-                        <input type="number" class="form-control" id="train-batch" value="32" min="8" max="128">
+                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.5rem;">
+                        <div class="form-group">
+                            <label>Timeframe</label>
+                            <select class="form-control" id="train-timeframe">
+                                <option value="1h" selected>1h</option>
+                                <option value="4h">4h</option>
+                                <option value="1d">1d</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Lookback (Tage)</label>
+                            <input type="number" class="form-control" id="train-lookback" value="365" min="30" max="1000">
+                        </div>
+                        <div class="form-group">
+                            <label>Epochen</label>
+                            <input type="number" class="form-control" id="train-epochs" value="100" min="10" max="1000">
+                        </div>
+                        <div class="form-group">
+                            <label>Batch Size</label>
+                            <input type="number" class="form-control" id="train-batch" value="32" min="8" max="128">
+                        </div>
                     </div>
                     <div class="form-group">
                         <label>Learning Rate</label>
@@ -751,16 +800,6 @@
                         <button class="btn btn-success" id="btn-train" onclick="startTraining()">&#9654; Training starten</button>
                         <button class="btn btn-danger" id="btn-stop-train" onclick="stopTraining()" disabled>&#9632; Stoppen</button>
                     </div>
-                </div>
-            </div>
-
-            <!-- Training History -->
-            <div class="card">
-                <div class="card-header">
-                    <h3 class="card-title">&#128203; Training-Verlauf</h3>
-                </div>
-                <div id="training-history">
-                    <div class="loading"><div class="spinner"></div></div>
                 </div>
             </div>
 
@@ -775,47 +814,13 @@
                 </div>
             </div>
 
-            <!-- Auto-Training -->
+            <!-- Training History -->
             <div class="card">
                 <div class="card-header">
-                    <h3 class="card-title">&#128336; Auto-Training</h3>
+                    <h3 class="card-title">&#128203; Training-Verlauf</h3>
                 </div>
-                <div id="auto-training-status">
+                <div id="training-history">
                     <div class="loading"><div class="spinner"></div></div>
-                </div>
-                <div class="form-group" style="margin-top: 1rem;">
-                    <label>Intervall</label>
-                    <select class="form-control" id="auto-interval">
-                        <option value="daily">Taglich</option>
-                        <option value="weekly" selected>Wochentlich</option>
-                        <option value="monthly">Monatlich</option>
-                        <option value="manual">Manuell</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Timeframes</label>
-                    <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
-                        <label style="display: flex; align-items: center; gap: 0.3rem; cursor: pointer;">
-                            <input type="checkbox" id="auto-tf-1h" checked> 1h
-                        </label>
-                        <label style="display: flex; align-items: center; gap: 0.3rem; cursor: pointer;">
-                            <input type="checkbox" id="auto-tf-4h" checked> 4h
-                        </label>
-                        <label style="display: flex; align-items: center; gap: 0.3rem; cursor: pointer;">
-                            <input type="checkbox" id="auto-tf-1d" checked> 1d
-                        </label>
-                    </div>
-                </div>
-                <div style="display: flex; gap: 0.5rem; margin-top: 1rem;">
-                    <button class="btn btn-success" id="btn-enable-auto" onclick="toggleAutoTraining(true)">
-                        &#9654; Aktivieren
-                    </button>
-                    <button class="btn btn-danger" id="btn-disable-auto" onclick="toggleAutoTraining(false)" disabled>
-                        &#9632; Deaktivieren
-                    </button>
-                    <button class="btn btn-primary" id="btn-run-now" onclick="runAutoTrainingNow()">
-                        &#9889; Jetzt starten
-                    </button>
                 </div>
             </div>
         </div>
